syntax = "proto3";

package go.micro.srv.LPS.domain;

service Domain {
	rpc Create(CreateModel) returns (Empty) {}
    rpc Update(Model) returns (Empty) {}
	rpc View(ModelId) returns (Model) {}
	rpc Delete(Condition) returns (Empty) {}
	rpc List(Condition) returns (Models) {}
}

message Empty {}

message Service {
	string name = 1;
}

message Metadata {
	string key = 1;
	string value = 2;
}

message CreateModel {
	string name = 1;
	repeated string service = 2;
	repeated Metadata metadata = 3;
	string expired_at = 4;
}

message Model {
	uint32 id = 1;
	string name = 2;
	repeated string service = 3;
	repeated Metadata metadata = 4;
	string expired_at = 5;
}

message ModelId {
	uint32 id = 1;
}

message Page {
	int64 pageSize = 1;
	int64 totalItem = 2;
	int64 page = 3;
    int64 pages = 4;
}

message Models {
	repeated Model data = 1;
    Page page = 2;
}

message Condition {
	uint32 id = 1;
	string name = 2;
	string expired_at = 3;
	int64 pageSize = 4;
	int64 offset = 5;
}
